--- a/web/css/style.less
+++ b/web/css/style.less
@@ -1,5 +1,12 @@
 
+@import '../3l/styles.less';
+
 @menu-height: 50px;
+
+@menu-item-margin: 5px;
+@menu-item-padding: 15px;
+@menu-item-icon-width: 25px;
+@menu-transition-time: 0.5s;
 
 html {width: 100%; height: 100%;}
 
@@ -15,14 +22,21 @@ body {
 
 .chromeframe { margin: 0.2em 0; background: #ccc; color: black; padding: 0.2em 0; }
 
+@logo-size: 110px;
 #logo {
   position: absolute;
-  z-index: 20000;
+  z-index: 30000;
   top: 20px;
-  left: 20px;
+  right: 0;
+  display: block;
+  border-radius: 1000px;
+  background: rgba(255, 255, 255, 0.65);
+  // width: @logo-size;
+  // height: @logo-size;
+  // line-height: @logo-size;
 }
 #logo > img {
-  max-height: 100px;
+  max-height: @logo-size;
 }
 
 #map {
@@ -37,19 +51,23 @@ body {
 #menu {
   position: absolute;
   z-index: 20000;
-  bottom: 20px;
-  left: 30px;
-  right: 30px;
-  background: rgba(60, 60, 60, 0.75);
+  top: 0;
+  left: 10px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  background: rgba(60, 60, 60, 0.85);
+  padding: 0 20px;
   height: @menu-height;
 }
 
-@menu-item-margin: 5px;
+#menu > * {
+  float: right;
+}
 
-#menu > a {
-  float: left;
+#menu .menu-item {
   display: inline-block;
-  padding: 0 20px;
+  position: relative;
+  padding: 0 @menu-item-padding 0 (@menu-item-padding+@menu-item-icon-width);
   margin: @menu-item-margin 2;
   font-family: Helvetica, Verdana, Arial;
   font-size: 12pt;
@@ -57,22 +75,68 @@ body {
   color: #e1e1e1;
 }
 
-#menu > a:hover {
-  background: #414242;
+#menu .menu-item:hover {
+  // background: #414242;
   text-decoration: none;
   color: #fff;
+  text-shadow: 0 0 20px #ffd672;
 }
 
 #menu .icon {
-  float: left;
+  position: absolute;
+  top: 8px;
+  left: @menu-item-padding;
   display: inline-block;
   margin-right: 3px;
   font-size: 1.5em;
-  line-height: @menu-height;
+  .transition(-webkit-transform @menu-transition-time);
 }
 
-#waypoints {
-  display: none;
+#menu .menu-item:hover .icon.hover-rotate { .transform(rotateZ(45deg)); }
+#menu .menu-item:hover .icon.hover-scale { .transform(scale(1.35)); }
+
+.toggle {
+  display: inline-block;
+  position: relative;
+}
+.toggle .target {
+  // display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  background: rgba(60, 60, 60, 0.75);
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+.toggle .target > li {
+  border-bottom: 1px solid #ccc;
+  color: #fff;
+}
+.toggle .target a {
+  display: block;
+  position: relative;
+  min-width: 270px;
+  padding: 0 10px;
+  font-size: 10pt;
+  line-height: 40px;
+  text-decoration: none;
+  color: inherit;
+}
+.toggle .target a:hover {
+  text-decoration: none;
+  color: orange;
+}
+.toggle .target .close {
+  position: absolute;
+  top: 0;
+  right: 5px;
+  color: inherit;
+  opacity: 1;
+  line-height: 40px;
 }
 
 /*Whatever you do, DO NOT even think of removing this invaluable line!!!!*/
