--- a/web/css/style.less
+++ b/web/css/style.less
@@ -20,6 +20,13 @@ body {
   margin-right: auto;
 }
 
+.user_info {
+  position: absolute;
+  z-index: 20000;
+  bottom: 10px;
+  right: 10px;
+}
+
 .chromeframe { margin: 0.2em 0; background: #ccc; color: black; padding: 0.2em 0; }
 
 @logo-size: 110px;
@@ -137,6 +144,16 @@ body {
   color: inherit;
   opacity: 1;
   line-height: 40px;
+}
+
+.circle {
+  border-radius: 1000px;
+  border: 1px solid #999;
+  background: #fff;
+  // width: 50px;
+  // height: 50px;
+  padding: 2px;
+  overflow: hidden;
 }
 
 /*Whatever you do, DO NOT even think of removing this invaluable line!!!!*/
